require version works. with exec

--- a/auto_updates.routing.yml
+++ b/auto_updates.routing.yml
@@ -1,7 +1,7 @@
 upper.page:
   path: '/upper'
   defaults:
-    _form: '\Drupal\upper\Form\UpdaterForm'
+    _form: '\Drupal\auto_updates\Form\UpdaterForm'
     _title: 'Update it!'
   requirements:
       _permission: 'administer software updates'
