--- a/auto_updates.services.yml
+++ b/auto_updates.services.yml
@@ -1,6 +1,6 @@
 services:
-    upper.updater:
-      class: Drupal\upper\Updater
+    auto_updates.updater:
+      class: Drupal\auto_updates\Updater
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
 #        calls:
 #            - [setService, ["@service_id"]]
